# StupiDownloader

./: Cargo.toml  README.md  ToDo.md
src/: lib.rs  main.rs  req.rs  request.rs
src/libs/: consts.rs  mod.rs
src/libs/request/: consts.rs  filename.rs  mod.rs
