[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.31"
eframe = "0.31"
futures-util = "0.3"
num_cpus = "1"
percent-encoding = "2"
thiserror = "2"

[dependencies.reqwest]
version = "0.12"
features = ["stream"]

[dependencies.tokio]
version = "1"
features = ["full"]

[profile.release]
lto = true
codegen-units = 1
strip = true
