[package]
name = "stupidownloader"
authors = ["DogeCN"]
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.31"
eframe = "0.31"
futures-util = "0.3"
percent-encoding = "2"
thiserror = "2"
arboard = "3.5"

[dependencies.reqwest]
version = "0.12"
features = ["stream"]

[dependencies.tokio]
version = "1.44.2"
features = ["rt-multi-thread"]

[profile.release]
lto = true
debug = 0
panic = "abort"
opt-level = 3
codegen-units = 1
strip = true
